  command /secure and new file sec.conf (task #7395)
* core: rename binary and man page from "weechat-curses" to "weechat"
  (task #11027)
* core: disable build of doc by default, add cmake option ENABLE_MAN to compile
  man page (off by default)
* core: add option "-o" for command /color
* core: fix priority of logical operators in evaluation of expression
  (AND takes precedence over the OR)
* core: remove gap after read marker line when there is no bar on the right
  (bug #39548)
* core: add CA_FILE option in cmake and configure to setup default
  value of option weechat.network.gnutls_ca_file (default is
  "/etc/ssl/certs/ca-certificates.crt") (task #12725)
* core: use "/dev/null" for stdin in hook_process instead of closing stdin
  (bug #39538)
* core: add option "scroll_beyond_end" for command /window (task #6745)
* core: add options weechat.look.hotlist_prefix and weechat.look.hotlist_suffix
  (task #12730)
* core: add option weechat.look.key_bind_safe
* core: fix char displayed at the intersection of three windows (bug #39331)
* core: fix crash in evaluation of expression when reading a string in hdata
  with a NULL value (bug #39419)
* core: fix display bugs with some UTF-8 chars that truncates messages displayed
  (for example U+26C4) (bug #39201)
* core: update man page and add translations (in french, german, italian, and
  japanese)
* core: remove extra space after empty prefix (when prefix for action, error,
  join, network or quit is set to empty string) (bug #39218)
* core: add option weechat.network.proxy_curl (task #12651)
* core: add "proxy" infolist and hdata
* core: fix random crash on mouse actions (bug #39094)
* core: set options weechat.look.color_inactive_{buffer|window} to "on" by
  default
* core: add infolist "layout" and hdata "layout", "layout_buffer" and
  "layout_window"
* core: fix line alignment when option weechat.look.buffer_time_format is set
  to empty string
* api: return hashtable item pointer in functions hashtable_set and